--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -7,6 +7,19 @@ server:
 
 # ??mysql???
 spring:
+  # mq配置 #
+  rabbitmq:
+    host: 43.142.66.17
+    port: 5672
+    username: guest
+    password: guest
+    virtual-host: /
+    listener:
+      simple:
+        retry:
+          enabled: true
+          max-attempts: 3 #最大重试次数
+          initial-interval: 3000 #重试间隔时间（单位毫秒）
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -33,3 +46,4 @@ spring:
     host: 43.142.66.17
     port: 6379
     password: Hua4222433
+
